// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Crypto expressions Hashing BLACK2B 1`] = `
"
        (
            template_id (static_id 0 (\\"crypto.test.ts\\" 22))
            storage (variant \\"None\\" (unit) (\\"crypto.test.ts\\" 23))
            storage_type ((unknown 0))
            messages ((hash_bytes_BLACK2B True False False True (\\"crypto.test.ts\\" 25) ((set_type (params (\\"crypto.test.ts\\" 25)) \\"bytes\\" (\\"crypto.test.ts\\" 30)) (set (data) (variant \\"Some\\" (blake2b (params (\\"crypto.test.ts\\" 25)) (\\"crypto.test.ts\\" 27)) (\\"crypto.test.ts\\" 27)) (\\"crypto.test.ts\\" 27)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"crypto.test.ts\\" 22))
        )
        "
`;

exports[`Crypto expressions Hashing BLACK2B 2`] = `
"{
    \\"micheline\\": \\"parameter (bytes %hash_bytes_BLACK2B);\\\\nstorage   (option bytes);\\\\ncode\\\\n  {\\\\n    CAR;        # @parameter\\\\n    # == hash_bytes_BLACK2B ==\\\\n    # self.data = sp.some(sp.blake2b(params)) # @parameter\\\\n    BLAKE2B;    # bytes\\\\n    SOME;       # option bytes\\\\n    NIL operation; # list operation : option bytes\\\\n    PAIR;       # pair (list operation) (option bytes)\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"option\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"bytes\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bytes\\",
                    \\"annots\\": [
                        \\"%hash_bytes_BLACK2B\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"BLAKE2B\\"
                    },
                    {
                        \\"prim\\": \\"SOME\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TOption(sp.TBytes))\\\\n    self.init(sp.none)\\\\n\\\\n  @sp.entry_point\\\\n  def hash_bytes_BLACK2B(self, params):\\\\n    sp.set_type(params, sp.TBytes)\\\\n    self.data = sp.some(sp.blake2b(params))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Crypto expressions Hashing KECCAK 1`] = `
"
        (
            template_id (static_id 0 (\\"crypto.test.ts\\" 33))
            storage (variant \\"None\\" (unit) (\\"crypto.test.ts\\" 34))
            storage_type ((unknown 0))
            messages ((hash_bytes_KECCAK True False False True (\\"crypto.test.ts\\" 36) ((set_type (params (\\"crypto.test.ts\\" 36)) \\"bytes\\" (\\"crypto.test.ts\\" 41)) (set (data) (variant \\"Some\\" (keccak (params (\\"crypto.test.ts\\" 36)) (\\"crypto.test.ts\\" 38)) (\\"crypto.test.ts\\" 38)) (\\"crypto.test.ts\\" 38)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"crypto.test.ts\\" 33))
        )
        "
`;

exports[`Crypto expressions Hashing KECCAK 2`] = `
"{
    \\"micheline\\": \\"parameter (bytes %hash_bytes_KECCAK);\\\\nstorage   (option bytes);\\\\ncode\\\\n  {\\\\n    CAR;        # @parameter\\\\n    # == hash_bytes_KECCAK ==\\\\n    # self.data = sp.some(sp.keccak(params)) # @parameter\\\\n    KECCAK;     # bytes\\\\n    SOME;       # option bytes\\\\n    NIL operation; # list operation : option bytes\\\\n    PAIR;       # pair (list operation) (option bytes)\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"option\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"bytes\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bytes\\",
                    \\"annots\\": [
                        \\"%hash_bytes_KECCAK\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"KECCAK\\"
                    },
                    {
                        \\"prim\\": \\"SOME\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TOption(sp.TBytes))\\\\n    self.init(sp.none)\\\\n\\\\n  @sp.entry_point\\\\n  def hash_bytes_KECCAK(self, params):\\\\n    sp.set_type(params, sp.TBytes)\\\\n    self.data = sp.some(sp.keccak(params))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Crypto expressions Hashing SHA3 1`] = `
"
        (
            template_id (static_id 0 (\\"crypto.test.ts\\" 66))
            storage (variant \\"None\\" (unit) (\\"crypto.test.ts\\" 67))
            storage_type ((unknown 0))
            messages ((hash_bytes_SHA3 True False False True (\\"crypto.test.ts\\" 69) ((set_type (params (\\"crypto.test.ts\\" 69)) \\"bytes\\" (\\"crypto.test.ts\\" 74)) (set (data) (variant \\"Some\\" (sha3 (params (\\"crypto.test.ts\\" 69)) (\\"crypto.test.ts\\" 71)) (\\"crypto.test.ts\\" 71)) (\\"crypto.test.ts\\" 71)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"crypto.test.ts\\" 66))
        )
        "
`;

exports[`Crypto expressions Hashing SHA3 2`] = `
"{
    \\"micheline\\": \\"parameter (bytes %hash_bytes_SHA3);\\\\nstorage   (option bytes);\\\\ncode\\\\n  {\\\\n    CAR;        # @parameter\\\\n    # == hash_bytes_SHA3 ==\\\\n    # self.data = sp.some(sp.sha3(params)) # @parameter\\\\n    SHA3;       # bytes\\\\n    SOME;       # option bytes\\\\n    NIL operation; # list operation : option bytes\\\\n    PAIR;       # pair (list operation) (option bytes)\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"option\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"bytes\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bytes\\",
                    \\"annots\\": [
                        \\"%hash_bytes_SHA3\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"SHA3\\"
                    },
                    {
                        \\"prim\\": \\"SOME\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TOption(sp.TBytes))\\\\n    self.init(sp.none)\\\\n\\\\n  @sp.entry_point\\\\n  def hash_bytes_SHA3(self, params):\\\\n    sp.set_type(params, sp.TBytes)\\\\n    self.data = sp.some(sp.sha3(params))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Crypto expressions Hashing SHA256 1`] = `
"
        (
            template_id (static_id 0 (\\"crypto.test.ts\\" 44))
            storage (variant \\"None\\" (unit) (\\"crypto.test.ts\\" 45))
            storage_type ((unknown 0))
            messages ((hash_bytes_SHA256 True False False True (\\"crypto.test.ts\\" 47) ((set_type (params (\\"crypto.test.ts\\" 47)) \\"bytes\\" (\\"crypto.test.ts\\" 52)) (set (data) (variant \\"Some\\" (sha256 (params (\\"crypto.test.ts\\" 47)) (\\"crypto.test.ts\\" 49)) (\\"crypto.test.ts\\" 49)) (\\"crypto.test.ts\\" 49)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"crypto.test.ts\\" 44))
        )
        "
`;

exports[`Crypto expressions Hashing SHA256 2`] = `
"{
    \\"micheline\\": \\"parameter (bytes %hash_bytes_SHA256);\\\\nstorage   (option bytes);\\\\ncode\\\\n  {\\\\n    CAR;        # @parameter\\\\n    # == hash_bytes_SHA256 ==\\\\n    # self.data = sp.some(sp.sha256(params)) # @parameter\\\\n    SHA256;     # bytes\\\\n    SOME;       # option bytes\\\\n    NIL operation; # list operation : option bytes\\\\n    PAIR;       # pair (list operation) (option bytes)\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"option\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"bytes\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bytes\\",
                    \\"annots\\": [
                        \\"%hash_bytes_SHA256\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"SHA256\\"
                    },
                    {
                        \\"prim\\": \\"SOME\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TOption(sp.TBytes))\\\\n    self.init(sp.none)\\\\n\\\\n  @sp.entry_point\\\\n  def hash_bytes_SHA256(self, params):\\\\n    sp.set_type(params, sp.TBytes)\\\\n    self.data = sp.some(sp.sha256(params))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Crypto expressions Hashing SHA512 1`] = `
"
        (
            template_id (static_id 0 (\\"crypto.test.ts\\" 55))
            storage (variant \\"None\\" (unit) (\\"crypto.test.ts\\" 56))
            storage_type ((unknown 0))
            messages ((hash_bytes_SHA512 True False False True (\\"crypto.test.ts\\" 58) ((set_type (params (\\"crypto.test.ts\\" 58)) \\"bytes\\" (\\"crypto.test.ts\\" 63)) (set (data) (variant \\"Some\\" (sha512 (params (\\"crypto.test.ts\\" 58)) (\\"crypto.test.ts\\" 60)) (\\"crypto.test.ts\\" 60)) (\\"crypto.test.ts\\" 60)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"crypto.test.ts\\" 55))
        )
        "
`;

exports[`Crypto expressions Hashing SHA512 2`] = `
"{
    \\"micheline\\": \\"parameter (bytes %hash_bytes_SHA512);\\\\nstorage   (option bytes);\\\\ncode\\\\n  {\\\\n    CAR;        # @parameter\\\\n    # == hash_bytes_SHA512 ==\\\\n    # self.data = sp.some(sp.sha512(params)) # @parameter\\\\n    SHA512;     # bytes\\\\n    SOME;       # option bytes\\\\n    NIL operation; # list operation : option bytes\\\\n    PAIR;       # pair (list operation) (option bytes)\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"option\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"bytes\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bytes\\",
                    \\"annots\\": [
                        \\"%hash_bytes_SHA512\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"SHA512\\"
                    },
                    {
                        \\"prim\\": \\"SOME\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TOption(sp.TBytes))\\\\n    self.init(sp.none)\\\\n\\\\n  @sp.entry_point\\\\n  def hash_bytes_SHA512(self, params):\\\\n    sp.set_type(params, sp.TBytes)\\\\n    self.data = sp.some(sp.sha512(params))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Crypto expressions Signatures CheckSignature 1`] = `
"
        (
            template_id (static_id 0 (\\"crypto.test.ts\\" 79))
            storage ()
            storage_type (\\"bool\\")
            messages ((checkSignature True False False True (\\"crypto.test.ts\\" 82) ((set_type (params (\\"crypto.test.ts\\" 82)) \\"signature\\" (\\"crypto.test.ts\\" 96)) (set (data) (check_signature (literal (key edpku3g7CeTEvSKhxipD4Q2B6EiEP8cR323u8PFmGFgKRVRvCneEmT) (\\"crypto.test.ts\\" 84)) (params (\\"crypto.test.ts\\" 82)) (literal (bytes 0x01) (\\"crypto.test.ts\\" 84)) (\\"crypto.test.ts\\" 84)) (\\"crypto.test.ts\\" 84)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"crypto.test.ts\\" 79))
        )
        "
`;

exports[`Crypto expressions Signatures CheckSignature 2`] = `
"{
    \\"micheline\\": \\"parameter (signature %checkSignature);\\\\nstorage   bool;\\\\ncode\\\\n  {\\\\n    CAR;        # @parameter\\\\n    # == checkSignature ==\\\\n    # self.data = sp.check_signature(sp.key('edpku3g7CeTEvSKhxipD4Q2B6EiEP8cR323u8PFmGFgKRVRvCneEmT'), params, sp.bytes('0x01')) # @parameter\\\\n    PUSH bytes 0x01; # bytes : @parameter\\\\n    SWAP;       # @parameter : bytes\\\\n    PUSH key \\\\\\"edpku3g7CeTEvSKhxipD4Q2B6EiEP8cR323u8PFmGFgKRVRvCneEmT\\\\\\"; # key : @parameter : bytes\\\\n    CHECK_SIGNATURE; # bool\\\\n    NIL operation; # list operation : bool\\\\n    PAIR;       # pair (list operation) bool\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bool\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"signature\\",
                    \\"annots\\": [
                        \\"%checkSignature\\"
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CAR\\"
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"bytes\\"
                            },
                            {
                                \\"bytes\\": \\"01\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"SWAP\\"
                    },
                    {
                        \\"prim\\": \\"PUSH\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"key\\"
                            },
                            {
                                \\"string\\": \\"edpku3g7CeTEvSKhxipD4Q2B6EiEP8cR323u8PFmGFgKRVRvCneEmT\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"CHECK_SIGNATURE\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TBool)\\\\n\\\\n  @sp.entry_point\\\\n  def checkSignature(self, params):\\\\n    sp.set_type(params, sp.TSignature)\\\\n    self.data = sp.check_signature(sp.key('edpku3g7CeTEvSKhxipD4Q2B6EiEP8cR323u8PFmGFgKRVRvCneEmT'), params, sp.bytes('0x01'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;
